# cpcm

./: Cargo.toml  schema.sql
src/: cli.rs  command_domain.rs  command_init.rs  command_server.rs  config.rs  error_types.rs  global_paths.rs  lib.rs  sql_strings.rs  sqlite_types.rs
