[package]
name = "cpcm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.6"
http = "1.2.0"
log = "0.4.22"
reqwest = { version = "0.12.11", features = ["json"] }
rpassword = "7.3.1"
rusqlite = { version = "0.32.1", features = ["bundled", "serde_json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tabled = "0.17.0"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"

[[bin]]
name = "cpcm"
path = "src/bin/cpcm.rs"
